fixing spelling mistakes, as well as improving mobile layout

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=500"/>
+		<meta name=
 		<title>Oliver Pfeffer</title>
-
 		<link href="styles.css" rel="stylesheet" />
 	</head>
 
