--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=500"/>
+		<meta name="viewport" content="width=device-width, inital-scale=1.0, maximum-scale=1.0"/>
 		<title>Oliver Pfeffer</title>
 		<link href="styles.css" rel="stylesheet" />
 	</head>
